--- a/src/index.css
+++ b/src/index.css
@@ -4,11 +4,15 @@
 
 html,
 body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
   font-family: "Poppins", sans-serif; /* Set Roboto as the font for the whole site */
+  scroll-behavior: smooth;
 }
 
-html {
-  scroll-behavior: smooth;
+body {
+  overflow-x: hidden; /* Keep body horizontally constrained, but vertically scrollable */
 }
 
 @keyframes slideIn {
